# OCR-Video-StreamApp

./: CMakeLists.txt  README.md  main.cpp  videoprocessor.cpp  videoprocessor.h
qml/: ColorDialog.qml  Main.qml  ResultDialog.qml
